upgrade to latest gradle and add a doc about how to build jre on jdk11